<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/menu_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_open_file"
        android:icon="@drawable/ic_folder_white_24dp"
        android:orderInCategory="101"
        android:title="@string/open_file"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_sort"
        android:orderInCategory="102"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/sort">
        <menu>
            <item
                android:id="@+id/menu_by_name"
                android:orderInCategory="200"
                android:title="@string/by_name"/>
            <item
                android:id="@+id/menu_by_date_created"
                android:orderInCategory="201"
                android:title="@string/by_date_created"/>
            <item
                android:id="@+id/menu_by_date_modified"
                android:orderInCategory="202"
                android:title="@string/by_date_modified"/>
            <item
                android:id="@+id/menu_swap_vert"
                android:orderInCategory="207"
                android:title="@string/swap_vert"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_selected_all"
        android:orderInCategory="104"
        android:icon="@drawable/ic_select_all_white_24dp"
        app:showAsAction="never"
        android:title="@string/select_all"/>
    <item
        android:id="@+id/menu_sync"
        android:orderInCategory="105"
        android:icon="@drawable/ic_sync_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/sync">
        <menu>
            <item
                android:id="@+id/menu_sync_file"
                android:orderInCategory="300"
                android:title="@string/file"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_save_file"
        android:orderInCategory="106"
        android:icon="@drawable/ic_save_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/save_file"/>
    <item
        android:id="@+id/menu_open_history"
        android:orderInCategory="107"
        android:title="@string/open_history"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_leave_history"
        android:orderInCategory="108"
        android:title="@string/leave_history"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_pie_chart"
        android:icon="@drawable/ic_pie_chart_white_24dp"
        android:orderInCategory="109"
        android:title="@string/menu_chart"
        app:showAsAction="ifRoom"/>
</menu>