<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"
        android:title="@string/share"/>
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:orderInCategory="102"
        app:showAsAction="ifRoom"
        android:title="@string/edit" />
    <item
        android:id="@+id/menu_info"
        android:icon="@drawable/ic_info_white_24dp"
        android:orderInCategory="103"
        app:showAsAction="ifRoom"
        android:title="@string/info" />
    <item
        android:id="@+id/menu_priority"
        android:orderInCategory="104"
        app:showAsAction="ifRoom"
        android:title="@string/select_priority">
        <menu>
            <item
                android:id="@+id/menu_priority_high"
                android:icon="@drawable/ic_trending_up_black_24dp"
                android:orderInCategory="300"
                android:title="@string/priority_high"/>
            <item
                android:id="@+id/menu_priority_middle"
                android:icon="@drawable/ic_trending_flat_black_24dp"
                android:orderInCategory="301"
                android:title="@string/priority_middle"/>
            <item
                android:id="@+id/menu_priority_low"
                android:icon="@drawable/ic_trending_down_black_24dp"
                android:orderInCategory="302"
                android:title="@string/priority_low"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_progress"
        android:orderInCategory="105"
        app:showAsAction="ifRoom"
        android:title="@string/select_progress">
        <menu>
            <item
                android:id="@+id/menu_progress_not_start"
                android:icon="@drawable/ic_do_not_disturb_on_black_24dp"
                android:orderInCategory="400"
                android:title="@string/progress_not_start"/>
            <item
                android:id="@+id/menu_progress_completed"
                android:icon="@drawable/ic_lens_completed_24dp"
                android:orderInCategory="401"
                android:title="@string/progress_completed"/>
            <item
                android:id="@+id/menu_progress_inprogress"
                android:icon="@drawable/ic_play_circle_filled_black_24dp"
                android:orderInCategory="402"
                android:title="@string/progress_inprogress"/>
            <item
                android:id="@+id/menu_progress_waiting"
                android:icon="@drawable/ic_pause_circle_filled_black_24dp"
                android:orderInCategory="403"
                android:title="@string/progress_waiting" />
            <item
                android:id="@+id/menu_progress_postponement"
                android:icon="@drawable/ic_cancel_black_24dp"
                android:orderInCategory="404"
                android:title="@string/progress_postponement"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_schedule"
        android:orderInCategory="106"
        app:showAsAction="ifRoom"
        android:title="@string/change_schedule">
        <menu>
            <item
                android:id="@+id/menu_schedule_this_week"
                android:icon="@drawable/ic_work_black_24dp"
                android:orderInCategory="600"
                android:title="@string/this_week"/>
            <item
                android:id="@+id/menu_schedule_weekend"
                android:icon="@drawable/ic_weekend_black_24dp"
                android:orderInCategory="601"
                android:title="@string/weekend"/>
            <item
                android:id="@+id/menu_schedule_next_week"
                android:icon="@drawable/ic_next_week_black_24dp"
                android:orderInCategory="602"
                android:title="@string/next_week"/>
        </menu>
    </item>
</menu>