<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/task"
            android:icon="@drawable/ic_circle_work_black_24dp"
            android:title="@string/task"/>
        <item
            android:id="@+id/recent"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/recent"/>
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/this_week"
            android:checked="true"
            android:icon="@drawable/ic_work_black_24dp"
            android:title="@string/this_week"/>
        <item
            android:id="@+id/weekend"
            android:icon="@drawable/ic_weekend_black_24dp"
            android:title="@string/weekend"/>
        <item
            android:id="@+id/next_week"
            android:icon="@drawable/ic_next_week_black_24dp"
            android:title="@string/next_week"/>
    </group>
    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/not_start"
            android:icon="@drawable/ic_do_not_disturb_on_black_24dp"
            android:title="@string/progress_not_start"/>
        <item
            android:id="@+id/inprogress"
            android:icon="@drawable/ic_play_circle_filled_black_24dp"
            android:title="@string/progress_inprogress"/>
        <item
            android:id="@+id/completed"
            android:icon="@drawable/ic_lens_completed_24dp"
            android:title="@string/progress_completed"/>
    </group>
    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/archive"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/archive"/>
        <item
            android:id="@+id/trash"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/trash"/>
    </group>
</menu>