<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_progress_not_start"
        android:icon="@drawable/ic_do_not_disturb_on_black_24dp"
        android:orderInCategory="400"
        android:title="@string/progress_not_start"/>
    <item
        android:id="@+id/menu_progress_completed"
        android:icon="@drawable/ic_lens_completed_24dp"
        android:orderInCategory="401"
        android:title="@string/progress_completed"/>
    <item
        android:id="@+id/menu_progress_inprogress"
        android:icon="@drawable/ic_play_circle_filled_black_24dp"
        android:orderInCategory="402"
        android:title="@string/progress_inprogress"/>
    <item
        android:id="@+id/menu_progress_waiting"
        android:icon="@drawable/ic_pause_circle_filled_black_24dp"
        android:orderInCategory="403"
        android:title="@string/progress_waiting" />
    <item
        android:id="@+id/menu_progress_postponement"
        android:icon="@drawable/ic_cancel_black_24dp"
        android:orderInCategory="404"
        android:title="@string/progress_postponement"/>
</menu>